	  an appropriate error if used.
	* Updated man page with bluetooth options.
	* Created a system.h header for system specific defines, which
	  includes autoconfs config.h.
	* Changed boolean types to use stdbool.h (where available)
	* Fixed typedefs to use *_t for the typedef symbol, not the original
	  struct name.
	* Extensive code cleanup to prepare for a release.
	* Updated copyright notices for 2005.

2005-07-22 Chris Leishman <chris@leishman.org>
	
	* Fixed --transfer example in man page.

2005-05-19 Chris Leishman <chris@leishman.org>
	
	* Corrected --no-reuseaddr handling (it was inverted).

2004-04-19 Mauro Tortonesi <mauro@deepspace6.net>

	* Updated i18n subsystem to gettext 0.14.1

2004-01-23 Mauro Tortonesi <mauro@deepspace6.net>

	* Added configuration time detection of Bluez.

2004-01-09 Mauro Tortonesi <mauro@deepspace6.net>

	* Applied Chris's patch that fixes SOMAXCONN backlog parameter for
	  listen(2) in src/network.c, slightly modified.

2004-01-08 Mauro Tortonesi <mauro@deepspace6.net>

	* Added support for Bluez (http://www.bluez.org) on Linux systems.

2003-10-07 Mauro Tortonesi <mauro@deepspace6.net>

	* Fixed a conflict with FreeBSD profiling library by renaming warn()
	  to warning(). Thanks to Filippo Natali for reporting the bug.

2003-06-04 Mauro Tortonesi <mauro@deepspace6.net>

	* Fixed CFLAGS handling problem. Thanks to Filippo Natali for
	  the patch and to the FreeBSD maintainers for reporting the bug.

2003-05-11 Mauro Tortonesi <mauro@deepspace6.net>

	* Released nc6 0.5

2003-03-26 Chris Leishman <chris@leishman.org>

	* Added --exec option for setting a command to be executed after connect.
	* Added --continous option for continuously accepting connections.

2003-03-16 Chris Leishman <chris@leishman.org>

	* Fixed bug in --half-close mode where the remote transmit stream wasn't
	   actually being half-closed.

2003-01-25 Mauro Tortonesi <mauro@deepspace6.net>

	* Added many more assertions in the code.